# openrunner

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
docs/: architecture.md  getting-started.md  run-agent-openapi.yaml
scripts/: dev-all.sh  dev-web.sh  install-agents.sh
src/: lib.rs  main.rs  storage.rs  types.rs
src/agent/: anthropic.rs  claude_code.rs  codex.rs  gateway.rs  handle.rs  kimi_cli.rs  mock.rs  mod.rs  openai.rs  opencode.rs  openrouter.rs  traits.rs
src/api/: handlers.rs  mod.rs  router.rs
src/api/openrouter/: mod.rs
src/auth/: jwt.rs  mod.rs
src/run/: events.rs  manager.rs  mod.rs  store.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/docs/: README.md  backend-api-requirements.md  run-agent-api.md  run-agent-openapi.yaml
web/docs/legacy/: system-design.md  system-design_CN.md
web/scripts/: dev.sh
web/src/: app.css  main.jsx
web/src/lib/: agentApi.js
web/src/react/: App.jsx
web/src/react/auth/: AuthContext.jsx
web/src/react/chat/: ChatPanel.jsx
web/src/react/components/ui/: button.jsx  dialog.jsx  input.jsx  label.jsx  select.jsx
web/src/react/pages/: LoginPage.jsx
web/src/react/shell/: SettingsModal.jsx  Shell.jsx
